[gd_scene load_steps=6 format=3 uid="uid://yw25civsp6e4"]

[ext_resource type="Texture2D" uid="uid://c5l5oir83fqn7" path="res://assets/serenvillage_2d_art.jpg" id="1_ikrdg"]
[ext_resource type="Script" uid="uid://ckf57y5gjkfej" path="res://scenes/UI/SaveSelect/save_select.gd" id="1_nepxu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nepxu"]
bg_color = Color(0.454902, 0.67451, 0.262745, 0.854902)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.454902, 0.67451, 0.262745, 0.854902)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku4ud"]
bg_color = Color(0.14902, 0.14902, 0.14902, 0.870588)
border_color = Color(0.14902, 0.14902, 0.14902, 0.870588)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yv5td"]
bg_color = Color(0.301961, 0.301961, 0.301961, 0.870588)
border_color = Color(0.301961, 0.301961, 0.301961, 0.870588)
border_blend = true

[node name="SaveSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nepxu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ikrdg")
expand_mode = 2
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 70

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MenuOptions" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="Save" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_nepxu")
text = "Select Game"

[node name="Slot1" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2

[node name="Save1" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot1"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_ku4ud")
theme_override_styles/hover = SubResource("StyleBoxFlat_yv5td")
text = "Save 1
"

[node name="Delete" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot1"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_ku4ud")
theme_override_styles/hover = SubResource("StyleBoxFlat_yv5td")
text = "Delete
"

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot1"]
layout_mode = 2

[node name="Slot2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2

[node name="Save2" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot2"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Save 2
"

[node name="Delete" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot2"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_ku4ud")
theme_override_styles/hover = SubResource("StyleBoxFlat_yv5td")
text = "Delete
"

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot2"]
layout_mode = 2

[node name="Slot3" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2

[node name="Save3" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot3"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Save 3
"

[node name="Delete" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot3"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_ku4ud")
theme_override_styles/hover = SubResource("StyleBoxFlat_yv5td")
text = "Delete
"

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot3"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot1/Save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot2/Save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Slot3/Save3" to="." method="_on_save_3_pressed"]
